--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "serialize-javascript": ">=2.1.1"
   },
   "eslintConfig": {
     "root": true,
@@ -30,7 +31,7 @@
       "eslint:recommended"
     ],
     "rules": {
-    	"no-console": 0
+      "no-console": 0
     },
     "parserOptions": {
       "parser": "babel-eslint"
